@@ -3,25 +3,20 @@ package com.neowutran.smsspammer.app.server;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 import com.neowutran.smsspammer.app.Logger;
-import com.neowutran.smsspammer.app.config.Config;
+import com.neowutran.smsspammer.app.data.Config;
+import com.neowutran.smsspammer.app.server.nossl.HttpManager;
+import org.apache.http.HttpResponse;
+import org.apache.http.client.HttpClient;
+import org.apache.http.client.methods.HttpGet;
 
-import javax.net.ssl.HttpsURLConnection;
-import javax.net.ssl.SSLContext;
-import javax.net.ssl.TrustManager;
-import javax.net.ssl.X509TrustManager;
 import java.io.IOException;
-import java.net.URL;
-import java.security.KeyManagementException;
-import java.security.NoSuchAlgorithmException;
-import java.security.cert.X509Certificate;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Scanner;
 
-/**
- * Created by draragar on 4/12/14.
- */
 public class ServerConnection extends Thread {
 
     private static String status;
@@ -41,33 +36,7 @@ public class ServerConnection extends Thread {
 
     @Override
     public void run() {
-        try {
-            acceptAllTheFuckingSSLCertificate();
-        } catch (KeyManagementException | NoSuchAlgorithmException e) {
-            Logger.debug(Config.LOGGER, e.getMessage());
-        }
         getSms();
-    }
-
-    public void acceptAllTheFuckingSSLCertificate() throws KeyManagementException, NoSuchAlgorithmException {
-        //!!! This is a motherfucking dirty shitty hack to accept ssl certificate self signed.
-        //!!! It will be easy for an attacker to exploit this shit.
-        //!!! But I don't know good thing to accept self signed certificate.
-        SSLContext ctx = SSLContext.getInstance("TLS");
-        ctx.init(null, new TrustManager[]{
-                new X509TrustManager() {
-                    public void checkClientTrusted(X509Certificate[] chain, String authType) {
-                    }
-
-                    public void checkServerTrusted(X509Certificate[] chain, String authType) {
-                    }
-
-                    public X509Certificate[] getAcceptedIssuers() {
-                        return new X509Certificate[]{};
-                    }
-                }
-        }, null);
-        HttpsURLConnection.setDefaultSSLSocketFactory(ctx.getSocketFactory());
     }
 
     public void getSms() {
@@ -75,14 +44,18 @@ public class ServerConnection extends Thread {
         setStatus(Config.getProperties().getProperty(Status.OK));
         String json = "";
 
+        HttpGet request = new HttpGet();
+        request.setHeader("Accept", "application/json");
+        HttpClient httpClient = HttpManager.getNewHttpClient();
         try {
-            URL url = new URL(Config.getAPIUrl());
-            Scanner scanner = new Scanner(url.openStream());
+            request.setURI(new URI(Config.getAPIUrl()));
+            HttpResponse response = httpClient.execute(request);
+            Scanner scanner = new Scanner(response.getEntity().getContent());
             while (scanner.hasNextLine()) {
                 json += scanner.nextLine();
             }
 
-        } catch (IOException e) {
+        } catch (URISyntaxException | IOException e) {
             status = Config.getProperties().getProperty(Status.CANNOT_CONNECT);
             Logger.error(Config.LOGGER, "wrong url:" + e.getMessage());
             return;
@@ -96,8 +69,9 @@ public class ServerConnection extends Thread {
             }.getType());
         } catch (RuntimeException e) {
             status = Config.getProperties().getProperty(Status.WRONG_DATA);
+            Logger.error(Config.LOGGER, "wrong url:" + e.getMessage());
+
         }
     }
-
 
 }
